<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonGenericPickConfig" Id="{c8bb78d7-20d4-0920-0d95-168baa514f79}">
    <Declaration><![CDATA[TYPE TcoTixonGenericPickConfig EXTENDS TcoTixonGenericConfig:
STRUCT
	  
		
	{attribute addProperty Name "<#Separator  active #>"}
	SeparatorActive : BOOL := TRUE;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>